--- a/marketing.html
+++ b/marketing.html
@@ -1,98 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="RNR Developer Team" name="author">
-    <meta name="">
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
-    <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
-    <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/svg.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-</head>
-<body class="bgpillars fullwidth">
-    <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
-        <div class="section" style="padding: 0 !important;">
-            <div class="white" id='display_desktop'>
-                <div class="col s12 m6 l6" id='marketing'>
-                    <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu"><i class="material-icons">menu</i></a>
-                    <div class='service-banner'></div>
-                </div>
-                <div class="col s12 m6 l6 services-content" >
-                    <div class="scroll">
-                        <h4>Digital Marketing</h4>
-                        <p class="grey-text">We develop customised digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. To give our clients the winning edge that they deserve we do the following:</p>
-                        <ul class="grey-text paragraph">
-                            <li><i class="material-icons bulleted">brightness_1</i> Develop and implement SEO and PPC strategies</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Create and manage link building strategies, content marketing strategies, and social media presences</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Innovate and present new marketing platforms and strategies</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Manage email and social media marketing campaigns</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Use Google Analytics, Google AdWords, and other relevant sites</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Drive traffic to client’s website</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Develop website and maintain (Purchasing of Domain and Hosting not included)</li>
-                            <li><i class="material-icons bulleted">brightness_1</i> Inbound Marketing and Content Strategy</li>
-                        </ul>
-                        <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta content="RNR Developer Team" name="author">
+        <meta name="">
+        <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+        <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
+        <link href="assets/images/icon.png" rel="icon">
+        <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/svg.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body class="bgpillars fullwidth">
+        <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
+            <div class="section" style="padding: 0 !important;">
+                <div class="white" id='display_desktop'>
+                    <div class="col s12 m6 l6" id='marketing'>
+                        <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu"><i class="material-icons">menu</i></a>
+                        <div class='service-banner'></div>
+                    </div>
+                    <div class="col s12 m6 l6 services-content" >
+                        <div class="scroll">
+                            <h4>Digital Marketing</h4>
+                            <p class="grey-text">We develop customised digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. To give our clients the winning edge that they deserve we do the following:</p>
+                            <ul class="grey-text paragraph">
+                                <li><i class="material-icons bulleted">brightness_1</i> Develop and implement SEO and PPC strategies</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Create and manage link building strategies, content marketing strategies, and social media presences</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Innovate and present new marketing platforms and strategies</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Manage email and social media marketing campaigns</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Use Google Analytics, Google AdWords, and other relevant sites</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Drive traffic to client’s website</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Develop website and maintain (Purchasing of Domain and Hosting not included)</li>
+                                <li><i class="material-icons bulleted">brightness_1</i> Inbound Marketing and Content Strategy</li>
+                            </ul>
+                            <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-       </div>
-    </div>
-    <div id="footer">
-        <div class="left">
-            <ul>
-                <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
-                <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
-            </ul>
+           </div>
         </div>
-        <div class="right">
-            <ul>
-                <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
-                <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
-                <li style="top: 5px;position:  relative;">
-                    <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
-                    <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
-                    <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+        <div id="footer">
+            <div class="left">
+                <ul>
+                    <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
+                    <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+                </ul>
+            </div>
+            <div class="right">
+                <ul>
+                    <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
+                    <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
+                    <li style="top: 5px;position:  relative;">
+                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
+                        <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
+                        <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <aside id="overlap-gradient">
+            <ul id="menu" class="side-nav">
+                <li>
+                    <div class="row">
+                        <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons">close</i></a>
+                        <ul class="collapsible collapsible-accordion" style="top: 30%; position: absolute;">
+                            <li class="">
+                                <a class="waves-effect waves-blue white-text" href="social.html">Social Media Management</a>
+                            </li>
+                            <li class="">
+                                <a class="waves-effect waves-blue white-text" href="marketing.html">Digital Marketing</a>
+                            </li>
+                            <li class="">
+                                <a class="waves-effect waves-blue white-text" href="lead.html">Lead Generation</a>
+                            </li>
+                            <li class="">
+                                <a class="waves-effect waves-blue white-text" href="webdev.html">Website Development</a>
+                            </li>
+                            <li class="">
+                                <a class="waves-effect waves-blue white-text" href="backend.html">Customer Support Back-End</a>
+                            </li>
+                            <li class="">
+                                <a class="waves-effect waves-blue white-text" href="frontend.html">Customer Support Front-End</a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
             </ul>
-        </div>
-    </div>
-    <aside id="overlap-gradient">
-        <ul id="menu" class="side-nav">
-            <li>
-                <div class="row">
-                    <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons">close</i></a>
-                    <ul class="collapsible collapsible-accordion" style="top: 30%; position: absolute;">
-                        <li class="">
-                            <a class="waves-effect waves-blue white-text" href="social.html">Social Media Management</a>
-                        </li>
-                        <li class="">
-                            <a class="waves-effect waves-blue white-text" href="marketing.html">Digital Marketing</a>
-                        </li>
-                        <li class="">
-                            <a class="waves-effect waves-blue white-text" href="lead.html">Lead Generation</a>
-                        </li>
-                        <li class="">
-                            <a class="waves-effect waves-blue white-text" href="webdev.html">Website Development</a>
-                        </li>
-                        <li class="">
-                            <a class="waves-effect waves-blue white-text" href="backend.html">Customer Support Back-End</a>
-                        </li>
-                        <li class="">
-                            <a class="waves-effect waves-blue white-text" href="frontend.html">Customer Support Front-End</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </aside>
+        </aside>
+    </body>
     <script src="assets/js/jquery.min.js"></script> 
     <script src="assets/js/jquery.easings.min.js"></script> 
     <script src="assets/js/jquery.sidr.min.js"></script>
