--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -6,7 +6,7 @@
         <meta name="">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
         <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
-        <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
+        <link href="assets/images/icon.png" rel="icon">
         <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
         <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
@@ -21,7 +21,7 @@
                 <div class="row">
                     <div class="col s10 m10 l8 offset-s1 offset-m1 offset-l2 enclosed">
                         <div class="row">
-                            <a href="index.html" class="btn-flat btn-floating grey-text darken-4 right"><i class="material-icons black-text">close</i></a>
+                            <a href="index.html" class="btn-flat btn-floating grey-text darken-4 right"><i class="material-icons black-text">home</i></a>
                         </div>
                         <div class="divider"></div>
                     	<h5 class="bold">Terms and Conditions</h5>
