--- a/backend.html
+++ b/backend.html
@@ -6,7 +6,7 @@
         <meta name="">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
         <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
-        <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
+        <link href="assets/images/icon.png" rel="icon">
         <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
         <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
